--- a/apps/peertube/config.json
+++ b/apps/peertube/config.json
@@ -1,11 +1,12 @@
 {
+    "$schema": "../schema.json",
     "name": "PeerTube",
     "available": true,
     "port": 8000,
     "exposable": true,
     "id": "peertube",
     "description": "PeerTube is a free, decentralized and federated video platform developed as an alternative to other platforms that centralize our data and attention, such as YouTube, Dailymotion or Vimeo.",
-    "short_description": "A decentralized YouTube alternative.",
+    "short_desc": "A decentralized YouTube alternative.",
     "tipi_version": 1,
     "version": "6.0.4",
     "categories": [
