--- a/apps/peertube/docker-compose.yml
+++ b/apps/peertube/docker-compose.yml
@@ -41,6 +41,7 @@ services:
   #     - webserver
 
   peertube:
+    container_name: peertube
     # If you don't want to use the official image and build one from sources:
     # build:
     #   context: .
@@ -58,7 +59,7 @@ services:
 
     ports:
     #  - "1935:1935" # Comment if you don't want to use the live feature
-     - "9000:9000" # Uncomment if you use another webserver/proxy or test PeerTube in local, otherwise not suitable for production
+     - "${APP_PORT}:9000" # Uncomment if you use another webserver/proxy or test PeerTube in local, otherwise not suitable for production
     volumes:
       # Remove the following line if you want to use another webserver/proxy or test PeerTube in local
       # - assets:/app/client/dist
