--- a/apps/peertube/docker-compose.yml
+++ b/apps/peertube/docker-compose.yml
@@ -49,20 +49,17 @@ services:
     image: chocobozzz/peertube:production-bookworm
     # Use a static IP for this container because nginx does not handle proxy host change without reload
     # This container could be restarted on crash or until the postgresql database is ready for connection
-    networks:
-      internal:
-        - tipi_main_network
-      proxy:
     environment:
       - PEERTUBE_SECRET=${PEERTUBE_SECRET}
       - PEERTUBE_WEBSERVER_HOSTNAME=${LOCAL_DOMAIN}
       - PEERTUBE_WEBSERVER_HTTPS=true
       - PEERTUBE_WEBSERVER_PORT=${APP_PORT}
-      - PEERTUBE_TRUST_PROXY=["127.0.0.1", "loopback", "172.18.0.0/16", "${INTERNAL_IP}"]
+      - PEERTUBE_TRUST_PROXY=["127.0.0.1", "loopback", "172.18.0.0/16", "10.0.0.225", "${INTERNAL_IP}"]
 
     ports:
     #  - "1935:1935" # Comment if you don't want to use the live feature
-     - "${APP_PORT}:9000" # Uncomment if you use another webserver/proxy or test PeerTube in local, otherwise not suitable for production
+    #  - "${APP_PORT}:9000" # Uncomment if you use another webserver/proxy or test PeerTube in local, otherwise not suitable for production
+      - "${APP_PORT}:443"
     volumes:
       # Remove the following line if you want to use another webserver/proxy or test PeerTube in local
       # - assets:/app/client/dist
@@ -109,8 +106,6 @@ networks:
       driver: default
       config:
       - subnet: 172.18.0.0/16
-  proxy:
-    external: true
 
 volumes:
   assets:
