--- a/apps/peertube/docker-compose.yml
+++ b/apps/peertube/docker-compose.yml
@@ -46,7 +46,7 @@ services:
     # build:
     #   context: .
     #   dockerfile: ./support/docker/production/Dockerfile.bookworm
-    image: chocobozzz/peertube:production-bookworm
+    image: chocobozzz/peertube:v6.0.4-bookworm
     # Use a static IP for this container because nginx does not handle proxy host change without reload
     # This container could be restarted on crash or until the postgresql database is ready for connection
     environment:
