--- a/apps/peertube/docker-compose.yml
+++ b/apps/peertube/docker-compose.yml
@@ -57,8 +57,9 @@ services:
 
     ports:
     #  - "1935:1935" # Comment if you don't want to use the live feature
-    #  - "${APP_PORT}:9000" # Uncomment if you use another webserver/proxy or test PeerTube in local, otherwise not suitable for production
-      - "${APP_PORT}:443"
+      - "${APP_PORT}:9000" # Uncomment if you use another webserver/proxy or test PeerTube in local, otherwise not suitable for production
+      # - "${APP_PORT}:80"
+      # - "${APP_PORT}:443"
     volumes:
       # Remove the following line if you want to use another webserver/proxy or test PeerTube in local
       # - assets:/app/client/dist
