--- a/apps/peertube/docker-compose.yml
+++ b/apps/peertube/docker-compose.yml
@@ -55,7 +55,8 @@ services:
       - PEERTUBE_DB_PASSWORD=tipi
 
     networks:
-      - tipi_main_network
+      - tipi:
+          - tipi_main_network
       - internal:
           ipv4_address: 172.19.0.42
       - proxy:
@@ -93,7 +94,8 @@ services:
     restart: "always"
     networks:
       - internal:
-      - tipi_main_network
+      - tipi:
+          - tipi_main_network
 
   redis:
     image: redis:6-alpine
@@ -115,7 +117,8 @@ services:
     restart: "always"
 
 networks:
-  - tipi_main_network
+  - tipi:
+      - tipi_main_network
   - internal:
       ipam:
         driver: default
