--- a/apps/peertube/docker-compose.yml
+++ b/apps/peertube/docker-compose.yml
@@ -83,7 +83,7 @@ services:
   postgres:
     image: postgres:13-alpine
     environment:
-      - POSTGRES_PASSWORD=tipi
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_USER=tipi
       - POSTGRES_DB=peertube
     volumes:
