--- a/apps/peertube/docker-compose.yml
+++ b/apps/peertube/docker-compose.yml
@@ -58,7 +58,7 @@ services:
       - tipi_main_network
 
     ports:
-    #  - "1935:1935" # Comment if you don't want to use the live feature
+      #  - "1935:1935" # Comment if you don't want to use the live feature
       - "${APP_PORT}:9000" # Uncomment if you use another webserver/proxy or test PeerTube in local, otherwise not suitable for production
       # - "${APP_PORT}:80"
       # - "${APP_PORT}:443"
@@ -74,7 +74,7 @@ services:
       - postfix
     restart: "always"
     labels:
-      traefik.enable: ${APP_EXPOSED}
+      traefik.enable: true
       traefik.http.routers.peertube-web.rule: Host(`${APP_DOMAIN}`)
       traefik.http.services.peertube-web.loadbalancer.server.port: 9000
       traefik.http.routers.peertube-web.entrypoints: websecure
@@ -118,10 +118,11 @@ services:
 
 volumes:
   assets:
-    
+
+
 networks:
   default:
     ipam:
       driver: default
       config:
-      - subnet: 172.18.0.0/16
+        - subnet: 172.18.0.0/16
