--- a/apps/peertube/docker-compose.yml
+++ b/apps/peertube/docker-compose.yml
@@ -83,9 +83,9 @@ services:
   postgres:
     image: postgres:13-alpine
     environment:
-      - PEERTUBE_POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - PEERTUBE_POSTGRES_USER=tipi
-      - PEERTUBE_POSTGRES_DB=peertube
+      - POSTGRES_PASSWORD=${PEERTUBE_POSTGRES_PASSWORD}
+      - POSTGRES_USER=tipi
+      - POSTGRES_DB=peertube
     volumes:
       - ${APP_DATA_DIR}/data/db:/var/lib/postgresql/data
     restart: "always"
