Try moving PeerTube DB directory

--- a/apps/peertube/docker-compose.yml
+++ b/apps/peertube/docker-compose.yml
@@ -79,8 +79,6 @@ services:
       traefik.http.services.peertube-web.loadbalancer.server.port: 9000
       traefik.http.routers.peertube-web.entrypoints: websecure
       traefik.docker.network: proxy
-    env_file:
-      - ${APP_DATA_DIR}/app.env
 
   postgres:
     image: postgres:13-alpine
@@ -89,17 +87,15 @@ services:
       - POSTGRES_USER=tipi
       - POSTGRES_DB=peertube
     volumes:
-      - ${APP_DATA_DIR}/data/db:/var/lib/postgresql/data
+      - ${APP_DATA_DIR}/data/db:/var/lib/peertube/postgresql/data
     restart: "always"
     networks:
       - tipi_main_network
-    env_file:
-      - ${APP_DATA_DIR}/app.env
 
   redis:
     image: redis:6-alpine
     volumes:
-      - ${APP_DATA_DIR}/data/redis:/data
+      - ${APP_DATA_DIR}/data/redis:/data/redis
     restart: "always"
     networks:
       - tipi_main_network
@@ -119,9 +115,6 @@ services:
 
     networks:
       - tipi_main_network
-
-    env_file:
-      - ${APP_DATA_DIR}/app.env
 
 volumes:
   assets:
