--- a/apps/peertube/docker-compose.yml
+++ b/apps/peertube/docker-compose.yml
@@ -83,22 +83,18 @@ services:
   postgres:
     image: postgres:13-alpine
     environment:
-      - POSTGRES_PASSWORD=${PEERTUBE_POSTGRES_PASSWORD}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_USER=tipi
       - POSTGRES_DB=peertube
     volumes:
       - ${APP_DATA_DIR}/data/db:/var/lib/peertube/postgresql/data
     restart: "always"
-    networks:
-      - tipi_main_network
 
   redis:
     image: redis:6-alpine
     volumes:
       - ${APP_DATA_DIR}/data/redis:/data/redis
     restart: "always"
-    networks:
-      - tipi_main_network
 
   postfix:
     image: mwader/postfix-relay
@@ -112,9 +108,6 @@ services:
     volumes:
       - ${APP_DATA_DIR}/opendkim/keys:/etc/opendkim/keys
     restart: "always"
-
-    networks:
-      - tipi_main_network
 
 volumes:
   assets:
