--- a/apps/peertube/docker-compose.yml
+++ b/apps/peertube/docker-compose.yml
@@ -40,6 +40,15 @@ services:
   #   depends_on:
   #     - webserver
 
+  environment:
+    - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+    - POSTGRES_USER=tipi
+    - POSTGRES_DB=peertube
+    - POSTGRES_HOST=${APP_HOST}
+    - PEERTUBE_SECRET=${PEERTUBE_SECRET}
+    - PEERTUBE_DB_USERNAME=tipi
+    - PEERTUBE_DB_PASSWORD=${POSTGRES_PASSWORD}
+
   peertube:
     container_name: peertube
     # If you don't want to use the official image and build one from sources:
@@ -49,10 +58,6 @@ services:
     image: chocobozzz/peertube:v6.0.4-bookworm
     # Use a static IP for this container because nginx does not handle proxy host change without reload
     # This container could be restarted on crash or until the postgresql database is ready for connection
-    environment:
-      - PEERTUBE_SECRET=${PEERTUBE_SECRET}
-      - PEERTUBE_DB_USERNAME=tipi
-      - PEERTUBE_DB_PASSWORD=${POSTGRES_PASSWORD}
 
     networks:
       - tipi_main_network
@@ -71,7 +76,7 @@ services:
     depends_on:
       - postgres
       - redis
-      - postfix
+      # - postfix
     restart: "always"
     labels:
       traefik.enable: true
@@ -82,35 +87,29 @@ services:
 
   postgres:
     image: postgres:13-alpine
-    environment:
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_USER=tipi
-      - POSTGRES_DB=peertube
-      - POSTGRES_HOST=${APP_HOST}
     volumes:
       - ${APP_DATA_DIR}/data/db:/var/lib/peertube/postgresql/data
     restart: "always"
     ports:
-      - "5555:5432"
+      - "8029:5432"
 
   redis:
     image: redis:6-alpine
     volumes:
       - ${APP_DATA_DIR}/data/redis:/data/redis
     restart: "always"
-
-  postfix:
-    image: mwader/postfix-relay
-    environment:
-      - PEERTUBE_SMTP_HOSTNAME=postfix
-      - PEERTUBE_SMTP_PORT=25
-      - PEERTUBE_SMTP_FROM=noreply@${LOCAL_DOMAIN}
-      - PEERTUBE_SMTP_TLS=false
-      - PEERTUBE_SMTP_DISABLE_STARTTLS=false
-      - PEERTUBE_ADMIN_EMAIL=${ADMIN_EMAIL}
-    volumes:
-      - ${APP_DATA_DIR}/opendkim/keys:/etc/opendkim/keys
-    restart: "always"
+  # postfix:
+  #   image: mwader/postfix-relay
+  #   environment:
+  #     - PEERTUBE_SMTP_HOSTNAME=postfix
+  #     - PEERTUBE_SMTP_PORT=25
+  #     - PEERTUBE_SMTP_FROM=noreply@${LOCAL_DOMAIN}
+  #     - PEERTUBE_SMTP_TLS=false
+  #     - PEERTUBE_SMTP_DISABLE_STARTTLS=false
+  #     - PEERTUBE_ADMIN_EMAIL=${ADMIN_EMAIL}
+  #   volumes:
+  #     - ${APP_DATA_DIR}/opendkim/keys:/etc/opendkim/keys
+  #   restart: "always"
 
 volumes:
   assets:
