--- a/apps/peertube/docker-compose.yml
+++ b/apps/peertube/docker-compose.yml
@@ -40,15 +40,6 @@ services:
   #   depends_on:
   #     - webserver
 
-  environment:
-    - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-    - POSTGRES_USER=tipi
-    - POSTGRES_DB=peertube
-    - POSTGRES_HOST=${APP_HOST}
-    - PEERTUBE_SECRET=${PEERTUBE_SECRET}
-    - PEERTUBE_DB_USERNAME=tipi
-    - PEERTUBE_DB_PASSWORD=${POSTGRES_PASSWORD}
-
   peertube:
     container_name: peertube
     # If you don't want to use the official image and build one from sources:
@@ -58,6 +49,11 @@ services:
     image: chocobozzz/peertube:v6.0.4-bookworm
     # Use a static IP for this container because nginx does not handle proxy host change without reload
     # This container could be restarted on crash or until the postgresql database is ready for connection
+    environment:
+      - PEERTUBE_SECRET=${PEERTUBE_SECRET}
+      - PEERTUBE_DB_USERNAME=tipi
+      - PEERTUBE_DB_PASSWORD=${POSTGRES_PASSWORD}
+      - PEERTUBE_DB_HOSTNAME=${APP_HOST}
 
     networks:
       - tipi_main_network
@@ -87,11 +83,16 @@ services:
 
   postgres:
     image: postgres:13-alpine
+    environment:
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_USER=tipi
+      - POSTGRES_DB=peertube
+      - POSTGRES_HOST=${APP_HOST}
     volumes:
       - ${APP_DATA_DIR}/data/db:/var/lib/peertube/postgresql/data
     restart: "always"
     ports:
-      - "8029:5432"
+      - "5555:5432"
 
   redis:
     image: redis:6-alpine
