--- a/apps/peertube/docker-compose.yml
+++ b/apps/peertube/docker-compose.yml
@@ -53,11 +53,13 @@ services:
       - PEERTUBE_SECRET=${PEERTUBE_SECRET}
       - PEERTUBE_DB_USERNAME=tipi
       - PEERTUBE_DB_PASSWORD=${POSTGRES_PASSWORD}
-      - PEERTUBE_DB_HOSTNAME=${APP_HOST}
+      - PEERTUBE_DB_HOSTNAME=${INTERNAL_IP}
       - PEERTUBE_DB_NAME=peertube
 
     networks:
-      - tipi_main_network
+      default:
+        ipv4_address: 172.18.0.42
+      tipi: tipi_main_network
 
     ports:
       #  - "1935:1935" # Comment if you don't want to use the live feature
@@ -88,7 +90,7 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_USER=tipi
       - POSTGRES_DB=peertube
-      - POSTGRES_HOST=${APP_HOST}
+      - POSTGRES_HOST=${INTERNAL_IP}
     volumes:
       - ${APP_DATA_DIR}/data/db:/var/lib/peertube/postgresql/data
     restart: "always"
