--- a/apps/peertube/docker-compose.yml
+++ b/apps/peertube/docker-compose.yml
@@ -57,10 +57,8 @@ services:
       - PEERTUBE_DB_NAME=peertube
 
     networks:
-      default:
-        ipv4_address: 172.18.0.42
-      tipi:
-        name: tipi_main_network
+      - default
+      - tipi_main_network
 
     ports:
       #  - "1935:1935" # Comment if you don't want to use the live feature
@@ -122,6 +120,7 @@ volumes:
 
 networks:
   default:
+    ipv4_address: 172.18.0.42
     ipam:
       driver: default
       config:
