--- a/apps/peertube/docker-compose.yml
+++ b/apps/peertube/docker-compose.yml
@@ -57,10 +57,8 @@ services:
       - PEERTUBE_DB_NAME=peertube
 
     networks:
-      default:
-        ipv4_address: 172.18.0.42
-      tipi:
-        name: tipi_main_network
+      - static
+      - tipi_main_network
 
     ports:
       #  - "1935:1935" # Comment if you don't want to use the live feature
@@ -121,6 +119,8 @@ volumes:
 
 
 networks:
+  static:
+    ipv4_address: 172.18.0.42
   default:
     ipam:
       driver: default
