--- a/apps/peertube/docker-compose.yml
+++ b/apps/peertube/docker-compose.yml
@@ -56,7 +56,7 @@ services:
       - PEERTUBE_DB_HOSTNAME=${INTERNAL_IP}
       - PEERTUBE_DB_NAME=peertube
       - PEERTUBE_DB_PORT=8029
-      - PEERTUBE_WEBSERVER_HOSTNAME=${DOMAIN}
+      - PEERTUBE_WEBSERVER_HOSTNAME=${APP_DOMAIN}
       - PEERTUBE_WEBSERVER_PORT=80
       - PEERTUBE_WEBSERVER_HTTPS=false
       - PEERTUBE_ADMIN_EMAIL=${ADMIN_EMAIL}
